Implemented Basic View Engine Implemented the basics of the view engine Added some test code for the view engine Corrected several little bugs encountered during above Shuffled url elements when the default web site picks up a request

--- a/Thingy.WebServerLite.Api/Thingy.WebServerLite.Api.csproj
+++ b/Thingy.WebServerLite.Api/Thingy.WebServerLite.Api.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IController.cs" />
     <Compile Include="IUser.cs" />
     <Compile Include="IView.cs" />
+    <Compile Include="IViewLibrary.cs" />
     <Compile Include="IViewProvider.cs" />
     <Compile Include="IViewResult.cs" />
     <Compile Include="IWebServer.cs" />
