--- a/Thingy.WebServerLite/Thingy.WebServerLite.csproj
+++ b/Thingy.WebServerLite/Thingy.WebServerLite.csproj
@@ -50,11 +50,20 @@
     <Compile Include="abstract\IUserFactory.cs" />
     <Compile Include="abstract\IKnownUser.cs" />
     <Compile Include="abstract\IKnownUserFactory.cs" />
+    <Compile Include="abstract\IMimeTypeProvider.cs" />
+    <Compile Include="abstract\IViewFactory.cs" />
+    <Compile Include="concrete\MimeTypeProvider.cs" />
+    <Compile Include="HtmlViewLibrary.cs" />
     <Compile Include="User.cs" />
     <Compile Include="concrete\UserFactory.cs" />
     <Compile Include="concrete\UserProvider.cs" />
     <Compile Include="concrete\KnownUser.cs" />
     <Compile Include="concrete\KnownUserFactory.cs" />
+    <Compile Include="concrete\ViewFactory.cs" />
+    <Compile Include="View.cs" />
+    <Compile Include="ViewProvider.cs" />
+    <Compile Include="utilities\ViewReader.cs" />
+    <Compile Include="ViewResult.cs" />
     <Compile Include="WebServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebServerRequest.cs" />
