--- a/Thingy.WebServerLite.Test.Gui/Thingy.WebServerLite.Test.Gui.csproj
+++ b/Thingy.WebServerLite.Test.Gui/Thingy.WebServerLite.Test.Gui.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DummyController.cs" />
+    <Compile Include="DefaultController.cs" />
     <Compile Include="IMainForm.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -104,8 +104,12 @@
     </Content>
     <Content Include="config\WebSites.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="site\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="site\Views\Default\Index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
