--- a/Thingy.WebServerLite.Test.Gui/Thingy.WebServerLite.Test.Gui.csproj
+++ b/Thingy.WebServerLite.Test.Gui/Thingy.WebServerLite.Test.Gui.csproj
@@ -109,6 +109,9 @@
     <Content Include="site\index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="site\Views\Master.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="site\Views\Default\Index.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
