Override template in controller Adds properties to the request that can be set by the controller to override the ViewTemplateName and ViewTemplateSection.

--- a/Thingy.WebServerLite.Test.Gui/Thingy.WebServerLite.Test.Gui.csproj
+++ b/Thingy.WebServerLite.Test.Gui/Thingy.WebServerLite.Test.Gui.csproj
@@ -111,6 +111,9 @@
     <Content Include="site\Views\Default\Footer.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="site\Views\Default\Switch.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="site\Views\Master.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
