--- a/Thingy.WebServerLite.Api/Thingy.WebServerLite.Api.csproj
+++ b/Thingy.WebServerLite.Api/Thingy.WebServerLite.Api.csproj
@@ -57,6 +57,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if not exist "..\..\..\..\..\assemblies\" mkdir "..\..\..\..\..\assemblies\"
+if not exist "..\..\..\..\..\assemblies\Thingy\" mkdir "..\..\..\..\..\assemblies\Thingy\"
+copy $(TargetPath) "..\..\..\..\..\assemblies\Thingy\$(TargetFileName)"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
