--- a/Thingy.WebServerLite.Test.Gui/Thingy.WebServerLite.Test.Gui.csproj
+++ b/Thingy.WebServerLite.Test.Gui/Thingy.WebServerLite.Test.Gui.csproj
@@ -62,6 +62,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebServerLoggingProvider.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WebServerLoggingProvider.Designer.cs">
+      <DependentUpon>WebServerLoggingProvider.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -74,6 +80,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="WebServerLoggingProvider.resx">
+      <DependentUpon>WebServerLoggingProvider.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
