--- a/Thingy.WebServerLite.Api/Thingy.WebServerLite.Api.csproj
+++ b/Thingy.WebServerLite.Api/Thingy.WebServerLite.Api.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AuthorizedRoleAttribute.cs" />
     <Compile Include="ControllerBase.cs" />
+    <Compile Include="exceptions\ControllerException.cs" />
     <Compile Include="HttpMethodAttribute.cs" />
     <Compile Include="IController.cs" />
     <Compile Include="IUser.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="IWebSite.cs" />
     <Compile Include="Priorities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="utilities\MarkUpBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
