Web Sites handled by PortNumber Web Sites are now identified by PortNumber rather than name. All reformatting of Url fields for the default site has been removed. All sites work the same. netsh called when web server started to add http url reservation. WebSite and some interfaces moved to Api so WebSites can override the Handle behaviour to allow the default web site to pick up some requests

--- a/Thingy.WebServerLite.Api/Thingy.WebServerLite.Api.csproj
+++ b/Thingy.WebServerLite.Api/Thingy.WebServerLite.Api.csproj
@@ -45,6 +45,8 @@
     <Compile Include="exceptions\ControllerException.cs" />
     <Compile Include="HttpMethodAttribute.cs" />
     <Compile Include="IController.cs" />
+    <Compile Include="IControllerProvider.cs" />
+    <Compile Include="IControllerProviderFactory.cs" />
     <Compile Include="IUser.cs" />
     <Compile Include="IView.cs" />
     <Compile Include="IViewLibrary.cs" />
@@ -59,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utilities\MarkUpBuilder.cs" />
     <Compile Include="exceptions\ViewException.cs" />
+    <Compile Include="WebSite.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
