Thingy.Infrastructure changes ----------------------------- Renamed CastleContainer to Bootstrapper to remove the ugly "double Container" syntax. Improved namespace checking to reduce redundant registrations of components. - Don't register a component unless it implements at least one interface ***that is also in an allowed namespace*** - Ignore components and interfaces in namespaces that start "System" or "Castle" unless they are explicitly allowed in InfrastructureConfiguration

--- a/Thingy.Infrastructure/Thingy.Infrastructure.csproj
+++ b/Thingy.Infrastructure/Thingy.Infrastructure.csproj
@@ -49,7 +49,7 @@
     <Compile Include="AssemblyFilters.cs" />
     <Compile Include="AssemblyInstallers.cs" />
     <Compile Include="ByConventionInstaller.cs" />
-    <Compile Include="CastleContainer.cs" />
+    <Compile Include="Bootstrapper.cs" />
     <Compile Include="ConfigurationInstallers.cs" />
     <Compile Include="ContainerReporter.cs" />
     <Compile Include="DoNotInstallByConventionAttribute.cs" />
